...
            mode="outlined"
            dense={true}
            value={username}
            onChangeText={setUsername}
            autoCompleteType="username"
            label="Benutzername"
            testID="loginScreenUsernameInput"
          />
          <TextInput
            style={styles.element}
            mode="outlined"
            dense={true}
            value={password}
            onChangeText={setPassword}
            secureTextEntry={!passwordVisible}
            textContentType="password"
            label="Passwort"
            testID="loginScreenPasswordInput"
            right={
              <TextInput.Icon
                name={passwordVisible ? 'eye-off' : 'eye'}
                onPress={() => setPasswordVisible(!passwordVisible)}
              />
            }
          />
          <Button
            style={styles.element}
            color={colors.primary}
            mode="contained"
            onPress={login}
            testID="loginScreenLoginButton">
            Anmelden
          </Button>
        </Surface>
      </View>
      <Snackbar
        visible={snackbar}
...
