...
export default function NavigationBar({authService, navigation}) {
  return (
    <Appbar style={styles.bottom}>
      <Appbar.Action
        icon="close-circle-outline"
        onPress={logout}
        testID="navigationBarLogoutButton"
      />
      <Appbar.Action
        icon="map-outline"
        onPress={openMap}
        testID="navigationBarMapButton"
      />
...
