...
          <TextInput
            style={styles.input}
            label="Kommentar"
            onChangeText={setText}
            multiline={true}
            value={text}
            testID="commentInput"
          />
          <View style={styles.buttons}>
            <IconButton
              icon="send"
              color={colors.primary}
              onPress={send}
              disabled={!isFormValid() || submitting}
              testID="send"
            />
            <IconButton
...
